# Agents-for-python

libraries/Authentication/microsoft-agents-authentication-msal/: pyproject.toml
libraries/Builder/microsoft-agents-builder/: pyproject.toml
libraries/Client/microsoft-agents-client/: pyproject.toml
libraries/Client/microsoft-agents-connector/: pyproject.toml
libraries/Client/microsoft-agents-copilotstudio-client/: pyproject.toml
libraries/Core/microsoft-agents-authorization/: pyproject.toml
libraries/Core/microsoft-agents-core/: pyproject.toml
libraries/Hosting/microsoft-agents-hosting-aiohttp/: pyproject.toml
libraries/Hosting/microsoft-agents-hosting-teams/: pyproject.toml
