[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microsoft-agents-hosting-teams"
version = "0.0.0a4.dev1"
description = "A protocol library for Microsoft Agents"
authors = [{name = "Microsoft Corporation"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "microsoft-agents-connector==0.0.0a4.dev1",
    "microsoft-agents-builder==0.0.0a4.dev1",
    "aiohttp>=3.11.11",
]

[project.urls]
"Homepage" = "https://github.com/microsoft/Agents-for-python"
